--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,103 +1,3 @@
-altair==4.2.0
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.4
-Bottleneck @ file:///opt/concourse/worker/volumes/live/f7139d11-2eee-4f6e-48cd-73168dc9e900/volume/bottleneck_1648028909796/work
-cachetools==5.2.0
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_83242e7e-f82d-4a71-8ef2-9d71d212d249gu_wxmeq/croots/recipe/certifi_1655968827803/work/certifi
-cffi==1.15.1
-charset-normalizer==2.1.0
-click==8.1.3
-commonmark==0.9.1
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.3
-gitdb==4.0.9
-GitPython==3.1.27
-idna==3.3
-importlib-metadata==4.12.0
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-jedi==0.18.1
-Jinja2==3.1.2
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-jsonschema==4.6.2
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random @ file:///opt/concourse/worker/volumes/live/a9eca864-069c-4240-73c8-4e51b036a10d/volume/mkl_random_1639994047876/work
-mkl-service==2.4.0
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numexpr @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_f4cadb13-5662-4009-98e5-0105539d6a65fifix2d5/croots/recipe/numexpr_1656940304949/work
-numpy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_e3f85f54-0572-4c0e-b190-4bc4766fc3fenewxarhq/croots/recipe/numpy_and_numpy_base_1652801682879/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
 pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-protobuf==3.20.1
-psutil==5.9.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==8.0.0
-pycparser==2.21
-pydeck==0.7.1
-Pygments==2.12.0
-Pympler==1.0.1
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyrsistent==0.18.1
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_1caf090c-01b6-4973-adac-d2eb884a674e7zonb9eb/croots/recipe/pytz_1654762641285/work
-pytz-deprecation-shim==0.1.0.post0
-pyzmq==23.2.0
-requests==2.28.1
-rich==12.4.4
-scikit-learn @ file:///Users/builder/ci_310/scikit-learn_1642608976196/work
-scipy @ file:///Users/builder/ci_310/scipy_1642604663510/work
-semver==2.13.0
-Send2Trash==1.8.0
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap==5.0.0
-soupsieve==2.3.2.post1
-stack-data==0.3.0
+scikit-learn==1.0.2
 streamlit==1.10.0
-terminado==0.15.0
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tinycss2==1.1.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.3.0
-typing_extensions==4.3.0
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.10
-validators==0.20.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.6.1
-zipp==3.8.0
